--- a/demo/demo.html
+++ b/demo/demo.html
@@ -16,12 +16,14 @@
   >
   </vue-editorjs>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/vue"></script>
+<script src="https://unpkg.com/vue@next"></script>
 <script src="https://cdn.jsdelivr.net/npm/@editorjs/header"></script>
 <script src="../dist/vue-editorjs.js"></script>
 <script>
-  new Vue({
-    el: '#app',
+  Vue.createApp({
+    components: {
+      [VueEditorJS.Editor.name]: VueEditorJS.Editor
+    },
     data() {
       return {
         initData: {},
@@ -50,7 +52,7 @@
 
       }
     }
-  })
+  }).mount('#app')
 </script>
 </body>
 </html>
